--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "user",
     "password": "pass",
-    "database": "blog",
+    "database": "social_media_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
